--- a/package.json
+++ b/package.json
@@ -54,13 +54,24 @@
     "vite": "^6.0.3"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.4",
     "@swc/core": "^1.10.1",
+    "@types/hast": "^3.0.4",
+    "@types/mdast": "^4.0.4",
+    "@types/node": "^22.10.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "@types/unist": "^3.0.3",
     "astro": "^5.0.5",
+    "astro-scripts": "./scripts",
     "cheerio": "1.0.0",
+    "hash": "^0.2.1",
+    "mdast": "^3.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "rollup": "^4.28.1",
+    "typescript": "^5.7.2",
+    "unist": "^0.0.1"
   },
   "peerDependencies": {
     "@types/react": "^17.0.50 || ^18.0.21 || ^19.0.0",
