--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react-swc": "^3.7.2",
+    "react-refresh": "^0.16.0",
     "ultrahtml": "^1.5.3",
     "vite": "^6.0.3"
   },
